--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
   /:
-    url: "https://author-p142661-e1463637.adobeaemcloud.com/bin/franklin.delivery/adobe-rnd/aem-boilerplate-xwalk/main"
+    url: "https://p142661-e1463637/bin/franklin.delivery/keimatch/xwalk-trial/main"
     type: "markup"
     suffix: ".html"
